--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-GE463D2YBN"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-GE463D2YBN');
+</script>
     <meta charset="UTF-8">
     <title>My First Page</title>
     <link rel="stylesheet" type="text/css" href="style.css">
